--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "electron-as-browser",
-  "version": "1.0.0",
-  "description": "Make electron like browser easy and flexible.",
+  "name": "pxqbrowse-ejs",
+  "version": "0.0.1",
+  "description": "new",
   "keywords": [
     "electron",
     "browser",
@@ -9,35 +9,44 @@
     "tab",
     "addressbar"
   ],
-  "main": "index.js",
-  "author": "hui.liu",
+  "main": "main/main.js",
+  "author": "pxproj",
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/hulufei/electron-as-browser"
+    "url": "https://github.com/"
   },
-  "files": [
-    "index.js",
-    "useConnect.js",
-    "control.js"
-  ],
   "scripts": {
-    "docs": "documentation build *.js -f html -o docs",
-    "start:control": "npx babel --watch example/renderer/control.jsx --out-file example/renderer/control-compiled.js",
-    "start": "electron example/main.js"
+    "start:control": "npx babel src --out-dir main/renderer",
+    "start": "electron main/main.js",
+    "pack": "electron-builder --dir",
+    "dist": "electron-builder"
+  },
+  "build": {
+    "appId": "px.xbrowse",
+    "mac": {
+      "category": "your.app.category.type"
+    }
   },
   "dependencies": {
-    "electron-log": "^3.0.7"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.5.5",
-    "@babel/core": "^7.5.5",
-    "@babel/preset-env": "^7.5.5",
-    "@babel/preset-react": "^7.0.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
+    "@mui/material": "^5.2.8",
     "classnames": "^2.2.6",
-    "electron": "^16.0.7",
+    "custom-electron-titlebar": "^3.2.10",
+    "data-store": "^4.0.3",
+    "electron-log": "^3.0.7",
     "file-url": "^2.0.2",
     "react": "^16.8.6",
-    "react-dom": "^16.8.6"
+    "react-dom": "^16.8.6",
+    "react-loading-icons": "^1.0.8"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.16.8",
+    "@babel/core": "^7.16.7",
+    "@babel/preset-env": "^7.16.8",
+    "@babel/preset-react": "^7.16.7",
+    "electron": "^16.0.7",
+    "electron-builder": "^22.14.5"
   }
 }
